# TP-machine-learning-server

./: colon_cancer_model.pkl  db.sqlite3  pyproject.toml  scaler.pkl  start.bat
accounts/: models.py  serializers.py
accounts/migrations/: 0001_initial.py  0002_remove_user_full_name.py
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_prediction_confidence_alter_prediction_value.py
django_project/: settings.py  urls.py
static/assets/: index-BwT9yugK.css
staticfiles/: index-D19Rm2yg.js
templates/: index.html
